--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,15 +1,15 @@
-{
-	servers localhost:500 {
-		protocols h3
+localhost:500 {
+	tls cert.pem tls.key
+	@quic {
+		path /wt
 	}
-	servers localhost:4200 {
-		protocols h1 h2
+	reverse_proxy @quic https://localhost:5001 {
+		transport http {
+			versions h3
+		}
 	}
 }
 
-localhost:500 {
-	reverse_proxy https://0.0.0.0:9000
-}
 localhost:8080 {
 	reverse_proxy http://localhost:4200
 }
