--- a/server/Properties/launchSettings.json
+++ b/server/Properties/launchSettings.json
@@ -8,16 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:9000"
-    },
-    "Container (Dockerfile)": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "9000"
-      },
-      "publishAllPorts": true,
+      "applicationUrl": "https://localhost:5001",
       "useSSL": true
     }
   },
