--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,15 +1,14 @@
-localhost:500 {
-	tls cert.pem tls.key
-	@quic {
-		path /wt
-	}
-	reverse_proxy @quic https://localhost:5001 {
-		transport http {
-			versions h3
-		}
+{
+	default_sni localhost
+	local_certs
+	servers :8080 {
+		trusted_proxies static private_ranges
+		client_ip_headers X-Forwarded-For X-Real-IP
+		strict_sni_host on
 	}
 }
 
 localhost:8080 {
 	reverse_proxy http://localhost:4200
+	tls tls.crt tls.key
 }
